Change name on main page

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "James Ramsay"
   avatar           : "/images/LinkedIn_picture.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Data Science Portfolio"
   location         : "London"
